--- a/bokehjs/src/less/widgets/inputs.less
+++ b/bokehjs/src/less/widgets/inputs.less
@@ -5,6 +5,7 @@
 }
 
 .bk-input {
+  position: relative;
   display: inline-block;
   width: 100%;
   flex-grow: 1;
@@ -24,7 +25,7 @@
 
   .placeholder(#999);
 
-  &[disabled] {
+  &[disabled], &.bk-disabled {
     cursor: not-allowed;
     background-color: #eee;
     opacity: 1;
