fix font-size css issue

--- a/bokehjs/src/less/base.less
+++ b/bokehjs/src/less/base.less
@@ -15,7 +15,7 @@
 :host {
   box-sizing: border-box;
   font-family: var(--base-font);
-  font-size: 13px; // 0.8em
+  font-size: var(--font-size, 13px); // 0.8em
   line-height: var(--line-height);
 }
 
