fix font-size calcs

--- a/bokehjs/src/less/tooltips.less
+++ b/bokehjs/src/less/tooltips.less
@@ -16,7 +16,7 @@
   // TODO: contain: layout style paint;
   width: max-content;
   font-weight: 300;
-  font-size: var(--font-size, 12px);
+  font-size: var(calc(--font-size - 1px), 12px);
   position: fixed;
   padding: 5px;
   border: 1px solid var(--tooltip-border);
