--- a/bokehjs/src/less/widgets/tables.less
+++ b/bokehjs/src/less/widgets/tables.less
@@ -1,5 +1,5 @@
 :host {
-  --data-table-font-size: calc(--font-size - 2px, 11px);
+  --data-table-font-size: calc(var(--font-size, 13px) - 2px);
 }
 
 .bk-data-table {
