Redesign the widget

--- a/bokehjs/src/less/widgets/inputs.less
+++ b/bokehjs/src/less/widgets/inputs.less
@@ -114,6 +114,7 @@ select[multiple], select[size], textarea {
 }
 
 .bk-input-group {
+  position: relative;
   width: 100%;
   height: 100%;
   display: inline-flex;
