--- a/bokehjs/src/less/menus.less
+++ b/bokehjs/src/less/menus.less
@@ -33,7 +33,7 @@
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: var(--border-radius);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.175);
 }
 
 :host(.bk-horizontal) {
