Redesign tooltip around CSS position `fixed`
This allows tooltips to be completely removed from document
flow, which allows to avoid viewport overflow/scrollbars for
large tooltips.

--- a/bokehjs/src/less/tooltips.less
+++ b/bokehjs/src/less/tooltips.less
@@ -17,7 +17,7 @@
   width: max-content;
   font-weight: 300;
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   padding: 5px;
   border: 1px solid var(--tooltip-border);
   color: var(--tooltip-text);
