Simplify CSS of tooltip's arrow

--- a/bokehjs/src/less/tooltips.less
+++ b/bokehjs/src/less/tooltips.less
@@ -30,76 +30,64 @@
   pointer-events: none;
 }
 
-.tooltip-arrow-horizontal() {
+.bk-arrow {
+  display: none;
   position: absolute;
-  margin: calc(-1*var(--tooltip-arrow-half-height)) 0 0 0;
-  top: 50%;
   width: 0;
   height: 0;
-  border-style: solid;
-  border-width: var(--tooltip-arrow-half-height) 0 var(--tooltip-arrow-half-height) 0;
-  border-color: transparent;
   content: " ";
+  border-style: solid;
+  border-color: transparent;
+}
+
+:host(.bk-show-arrow) .bk-arrow {
   display: block;
 }
 
-.tooltip-arrow-vertical() {
-  position: absolute;
-  margin: 0 0 0 calc(-1*var(--tooltip-arrow-half-width));
-  left: 50%;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 var(--tooltip-arrow-half-width) 0 var(--tooltip-arrow-half-width);
-  border-color: transparent;
-  content: " ";
-  display: block;
+:host(.bk-left), :host(.bk-right) {
+  .bk-arrow {
+    margin: calc(-1*var(--tooltip-arrow-half-height)) 0 0 0;
+    top: 50%;
+    border-width: var(--tooltip-arrow-half-height) 0 var(--tooltip-arrow-half-height) 0;
+  }
+}
+
+:host(.bk-above), :host(.bk-below) {
+  .bk-arrow {
+    margin: 0 0 0 calc(-1*var(--tooltip-arrow-half-width));
+    left: 50%;
+    border-width: 0 var(--tooltip-arrow-half-width) 0 var(--tooltip-arrow-half-width);
+  }
+}
+
+:host(.bk-left) .bk-arrow {
+  left: calc(-1*var(--tooltip-arrow-width));
+  border-right-width: var(--tooltip-arrow-width);
+  border-right-color: var(--tooltip-arrow-color);
+}
+
+:host(.bk-right) .bk-arrow {
+  right: calc(-1*var(--tooltip-arrow-width));
+  border-left-width: var(--tooltip-arrow-width);
+  border-left-color: var(--tooltip-arrow-color);
+}
+
+:host(.bk-above) .bk-arrow {
+  top: calc(-1*var(--tooltip-arrow-height));
+  border-bottom-width: var(--tooltip-arrow-height);
+  border-bottom-color: var(--tooltip-arrow-color);
+}
+
+:host(.bk-below) .bk-arrow {
+  bottom: calc(-1*var(--tooltip-arrow-height));
+  border-top-width: var(--tooltip-arrow-height);
+  border-top-color: var(--tooltip-arrow-color);
 }
 
 .bk-tooltip-content > div:not(:first-child) {
   // gives space when multiple elements are being hovered over
   margin-top: 5px;
   border-top: var(--tooltip-border) 1px dashed;
-}
-
-:host(.bk-left.bk-tooltip-arrow) .bk-tooltip-content::before {
-  .tooltip-arrow-horizontal();
-  left: calc(-1*var(--tooltip-arrow-width));
-  border-right-width: var(--tooltip-arrow-width);
-  border-right-color: var(--tooltip-arrow-color);
-}
-
-:host(.bk-left) .bk-tooltip-content::before {
-  left: calc(-1*var(--tooltip-arrow-width));
-  border-right-width: var(--tooltip-arrow-width);
-  border-right-color: var(--tooltip-arrow-color);
-}
-
-:host(.bk-right.bk-tooltip-arrow) .bk-tooltip-content::after {
-  .tooltip-arrow-horizontal();
-  right: calc(-1*var(--tooltip-arrow-width));
-  border-left-width: var(--tooltip-arrow-width);
-  border-left-color: var(--tooltip-arrow-color);
-}
-
-:host(.bk-right) .bk-tooltip-content::after {
-  right: calc(-1*var(--tooltip-arrow-width));
-  border-left-width: var(--tooltip-arrow-width);
-  border-left-color: var(--tooltip-arrow-color);
-}
-
-:host(.bk-above) .bk-tooltip-content::before {
-  .tooltip-arrow-vertical();
-  top: calc(-1*var(--tooltip-arrow-height));
-  border-bottom-width: var(--tooltip-arrow-height);
-  border-bottom-color: var(--tooltip-arrow-color);
-}
-
-:host(.bk-below) .bk-tooltip-content::after {
-  .tooltip-arrow-vertical();
-  bottom: calc(-1*var(--tooltip-arrow-height));
-  border-top-width: var(--tooltip-arrow-height);
-  border-top-color: var(--tooltip-arrow-color);
 }
 
 .bk-tooltip-row-label {
