--- a/bokehjs/src/less/widgets/color_map.less
+++ b/bokehjs/src/less/widgets/color_map.less
@@ -17,10 +17,7 @@
   width: 16px;
   height: 16px;
 
-  mask-size: 100% 100%;
-  mask-position: center center;
-  mask-repeat: no-repeat;
-  -webkit-mask-size: 100% 100%;
-  -webkit-mask-position: center center;
-  -webkit-mask-repeat: no-repeat;
+  .mask-size(100% 100%);
+  .mask-position(center center);
+  .mask-repeat(no-repeat);
 }
