Introduce --bokeh-font-size global variable

--- a/bokehjs/src/less/base.less
+++ b/bokehjs/src/less/base.less
@@ -1,10 +1,11 @@
 :host {
   --base-font: var(--bokeh-base-font, Helvetica, Arial, sans-serif);
   --mono-font: var(--bokeh-mono-font, monospace);
+  --font-size: var(--bokeh-font-size, 13px);
 
-  --font-size: 12px;
   --line-height: calc(20 / 14);
-  --line-height-computed: calc(var(--font-size) * var(--line-height));
+  // TODO -1px is for backwards compatibility; remove in the near future
+  --line-height-computed: calc(calc(var(--font-size) - 1px) * var(--line-height));
 
   --border-radius: 4px;
 
@@ -15,7 +16,7 @@
 :host {
   box-sizing: border-box;
   font-family: var(--base-font);
-  font-size: var(--font-size, 13px); // 0.8em
+  font-size: var(--font-size);
   line-height: var(--line-height);
 }
 
