Add support for z-index pinning to Dialog

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -200,6 +200,9 @@
 .bk-tool-icon-minimize { .tool-icon-mask(var(--bokeh-icon-minimize)); }
 .bk-tool-icon-maximize { .tool-icon-mask(var(--bokeh-icon-maximize)); }
 
+.bk-tool-icon-pin      { .tool-icon-mask(var(--bokeh-icon-pin)); }
+.bk-tool-icon-unpin    { .tool-icon-mask(var(--bokeh-icon-unpin)); }
+
 .bk-tool-icon-pointer  { .tool-icon-mask(var(--bokeh-icon-hand)); }
 .bk-tool-icon-delete   { .tool-icon-mask(var(--bokeh-icon-trash)); }
 
@@ -265,6 +268,11 @@
   --bokeh-icon-minimize: data-uri("icons/minimize.svg");
   --bokeh-icon-maximize: data-uri("icons/maximize.svg");
 
+  --bokeh-icon-pin: data-uri("icons/pin.svg");
+  --bokeh-icon-unpin: data-uri("icons/unpin.svg");
+
   --bokeh-icon-hand: data-uri("icons/hand.svg");
   --bokeh-icon-trash: data-uri("icons/trash.svg");
+
+
 }
