--- a/bokehjs/src/less/widgets/tables.less
+++ b/bokehjs/src/less/widgets/tables.less
@@ -1,5 +1,5 @@
 :host {
-  --data-table-font-size: calc(var(--font-size) - 1px);
+  --data-table-font-size: var(--font-size);
 }
 
 .bk-data-table {
