Formalize support for plot attributions

--- a/bokehjs/src/less/panels.less
+++ b/bokehjs/src/less/panels.less
@@ -3,7 +3,7 @@
 :host {
   position: absolute;
   background-color: white;
-  border: 1px solid gray;
-  padding: 5px;
-  border-radius: 5px;
+  //border: 1px solid gray;
+  //padding: 5px;
+  //border-radius: 5px;
 }
