--- a/bokehjs/src/less/attribution.less
+++ b/bokehjs/src/less/attribution.less
@@ -1,12 +1,19 @@
 :host {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   padding: 2px;
   background-color: rgba(255, 255, 255, 0.5);
   font-size: 9px;
   line-height: 1.05;
   white-space: nowrap;
+  max-width: var(--max-width);
+}
+
+:host > * {
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: right;
 }
 
 a {
