Replace .bring-to-front() with a CSS variable

--- a/bokehjs/src/less/base.less
+++ b/bokehjs/src/less/base.less
@@ -10,6 +10,8 @@
 
   --padding-vertical: 6px;
   --padding-horizontal: 12px;
+
+  --bokeh-top-level: 1000; // used for z-index of menus, dropdowns, etc.
 }
 
 :host {
