--- a/bokehjs/src/less/dropdown.less
+++ b/bokehjs/src/less/dropdown.less
@@ -15,7 +15,7 @@
   position: absolute;
   left: 0;
   width: 100%;
-  .bring-to-front();
+  z-index: var(--bokeh-top-level);
 
   cursor: pointer;
   font-size: var(--font-size);
