--- a/bokehjs/src/less/menus.less
+++ b/bokehjs/src/less/menus.less
@@ -26,7 +26,7 @@
   width: auto;
   height: auto;
 
-  .bring-to-front();
+  z-index: var(--bokeh-top-level);
 
   cursor: pointer;
   font-size: var(--font-size);
