--- a/bokehjs/src/less/panes.less
+++ b/bokehjs/src/less/panes.less
@@ -9,7 +9,7 @@
   height: auto;
 
   .no-user-select();
-  .bring-to-front();
+  z-index: var(--bokeh-top-level);
 
   cursor: pointer;
   font-size: var(--font-size);
