--- a/bokehjs/src/less/tooltips.less
+++ b/bokehjs/src/less/tooltips.less
@@ -23,7 +23,7 @@
   color: var(--tooltip-text);
   background-color: var(--tooltip-color);
   opacity: 0.95;
-  .bring-to-front();
+  z-index: var(--bokeh-top-level);
 }
 
 :host(.bk-non-interactive) {
