--- a/bokehjs/src/less/widgets/choices.less
+++ b/bokehjs/src/less/widgets/choices.less
@@ -54,7 +54,7 @@ input[type="search"] {
 }
 
 .choices__list--dropdown, .choices__list[aria-expanded] {
-  z-index: 1000;
+  z-index: var(--bokeh-top-level);
 
   & .choices__item--selectable {
     padding-right: 0;
