Finalize support for context menus

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -213,6 +213,10 @@
 .bk-tool-icon-text-align-center { .tool-icon-mask(var(--bokeh-icon-text-align-center)); }
 .bk-tool-icon-text-align-right  { .tool-icon-mask(var(--bokeh-icon-text-align-right));  }
 
+.bk-tool-icon-check { .tool-icon-mask(var(--bokeh-icon-check));  }
+.bk-tool-icon-square { .tool-icon-mask(var(--bokeh-icon-square));  }
+.bk-tool-icon-square-check { .tool-icon-mask(var(--bokeh-icon-square-check));  }
+
 :host {
   // Based on https://tabler-icons.io/ (MIT License)
   --bokeh-icon-question-mark: data-uri("icons/question-mark.svg");
@@ -287,4 +291,8 @@
   --bokeh-icon-text-align-left: data-uri("icons/text-align-left.svg");
   --bokeh-icon-text-align-center: data-uri("icons/text-align-center.svg");
   --bokeh-icon-text-align-right: data-uri("icons/text-align-right.svg");
+
+  --bokeh-icon-check: data-uri("icons/check.svg");
+  --bokeh-icon-square: data-uri("icons/square.svg");
+  --bokeh-icon-square-check: data-uri("icons/square-check.svg");
 }
