Update docstrings and properties' help

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -203,7 +203,7 @@
 .bk-tool-icon-pin      { .tool-icon-mask(var(--bokeh-icon-pin)); }
 .bk-tool-icon-unpin    { .tool-icon-mask(var(--bokeh-icon-unpin)); }
 
-.bk-tool-icon-pointer  { .tool-icon-mask(var(--bokeh-icon-hand));  }
+.bk-tool-icon-pointer  { .tool-icon-mask(var(--bokeh-icon-hand-pointing));  }
 .bk-tool-icon-delete   { .tool-icon-mask(var(--bokeh-icon-trash)); }
 
 .bk-tool-icon-bold   { .tool-icon-mask(var(--bokeh-icon-bold));   }
@@ -282,7 +282,7 @@
   --bokeh-icon-pin: data-uri("icons/pin.svg");
   --bokeh-icon-unpin: data-uri("icons/unpin.svg");
 
-  --bokeh-icon-hand: data-uri("icons/hand.svg");
+  --bokeh-icon-hand-pointing: data-uri("icons/hand-pointing.svg");
   --bokeh-icon-trash: data-uri("icons/trash.svg");
 
   --bokeh-icon-bold: data-uri("icons/bold.svg");
