add sd-gutter to custom css

--- a/docs/bokeh/source/_static/custom.css
+++ b/docs/bokeh/source/_static/custom.css
@@ -39,6 +39,9 @@ img.image-border {
   font-weight: 700;
   font-size: 110%;
 }
+.sd-row{
+    --sd-gutter-y: 1.5em;
+}
 
 /* Tweak sphinx-design cards */
 .bokeh-examples div {
