Set resize none as default for bk-input

--- a/bokehjs/src/less/widgets/inputs.less
+++ b/bokehjs/src/less/widgets/inputs.less
@@ -14,6 +14,7 @@
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: var(--border-radius);
+  resize: none;
 
   @border-focus: #66afe9;
   @border-focus-faded: fade(@border-focus, 60%);
