Add an icon for toggle selection mode

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -18,6 +18,10 @@
   .tool-icon(--bokeh-icon-replace-mode, "ReplaceMode");
 }
 
+.bk-tool-icon-toggle-mode {
+  .tool-icon(--bokeh-icon-toggle-mode, "ToggleMode");
+}
+
 .bk-tool-icon-append-mode {
   .tool-icon(--bokeh-icon-append-mode, "AppendMode");
 }
