Fix HTML/CSS warning for palette group detail

--- a/src/bokeh/server/views/app_index.html
+++ b/src/bokeh/server/views/app_index.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-menu">
 
       <a class="navbar-brand" href="//bokeh.org" id="logo">
-        <img src="https://static.bokeh.org/logos/logotype.svg" height="30" width="110" />
+        <img src="https://static.bokeh.org/logos/logotype.svg" alt="Logo" height="30" width="110" />
       </a>
 
       <button class="navbar-toggler ml-auto hidden-sm-up float-xs-left" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
