Add "open image in a new tab" mode to save tool

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -14,6 +14,10 @@
   .tool-icon-mask(var(--bokeh-icon-copy));
 }
 
+.bk-tool-icon-open {
+  .tool-icon-mask(var(--bokeh-icon-open));
+}
+
 .bk-tool-icon-replace-mode {
   .tool-icon(--bokeh-icon-replace-mode, "ReplaceMode");
 }
@@ -232,6 +236,7 @@
 
   --bokeh-icon-save: data-uri("icons/save.svg");
   --bokeh-icon-copy: data-uri("icons/copy.svg");
+  --bokeh-icon-open: data-uri("icons/open.svg");
 
   --bokeh-icon-tap-select: data-uri("icons/tap.svg");
   --bokeh-icon-lasso-select: data-uri("icons/lasso-select.svg");
