Add support for click-style pan tools

--- a/bokehjs/src/less/icons.less
+++ b/bokehjs/src/less/icons.less
@@ -114,6 +114,22 @@
   .tool-icon-mask(var(--bokeh-icon-y-pan));
 }
 
+.bk-tool-icon-pan-left {
+  .tool-icon-mask(var(--bokeh-icon-pan-left));
+}
+
+.bk-tool-icon-pan-right {
+  .tool-icon-mask(var(--bokeh-icon-pan-right));
+}
+
+.bk-tool-icon-pan-up {
+  .tool-icon-mask(var(--bokeh-icon-pan-up));
+}
+
+.bk-tool-icon-pan-down {
+  .tool-icon-mask(var(--bokeh-icon-pan-down));
+}
+
 .bk-tool-icon-range {
   .tool-icon(--bokeh-icon-range, "Range");
 }
@@ -244,6 +260,11 @@
   --bokeh-icon-pan: data-uri("icons/pan.svg");
   --bokeh-icon-x-pan: data-uri("icons/x-pan.svg");
   --bokeh-icon-y-pan: data-uri("icons/y-pan.svg");
+
+  --bokeh-icon-pan-left: data-uri("icons/pan_left.svg");
+  --bokeh-icon-pan-right: data-uri("icons/pan_right.svg");
+  --bokeh-icon-pan-up: data-uri("icons/pan_up.svg");
+  --bokeh-icon-pan-down: data-uri("icons/pan_down.svg");
 
   --bokeh-icon-box-select: data-uri("icons/box-select.svg");
   --bokeh-icon-x-box-select: data-uri("icons/x-box-select.svg");
