Make PaletteSelect use stylesheets instead of inline styles

--- a/bokehjs/src/less/widgets/palette_select_item.less
+++ b/bokehjs/src/less/widgets/palette_select_item.less
@@ -8,6 +8,12 @@
   gap: 0.5em;
 }
 
+.bk-swatch {
+  width: 100px;
+  height: auto;
+  align-self: stretch;
+}
+
 .bk-item {
   --active-tool-highlight: #26aae1;
 
