CSSify center and side panel layouts

--- a/bokehjs/src/less/canvas_panel.less
+++ b/bokehjs/src/less/canvas_panel.less
@@ -1,5 +1,8 @@
 :host {
-  position: absolute;
+  position: relative;
   overflow: hidden;
   pointer-events: none;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: auto;
 }
