--- a/bokehjs/src/less/legend.less
+++ b/bokehjs/src/less/legend.less
@@ -1,5 +1,7 @@
 :host {
-  position: absolute;
+  position: relative;
+  width: max-content;
+  height: max-content;
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: auto;
